# Jenny-MCP-Server

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  restart.sh  server.py  start.sh  stop.sh
config/: defaults.example.json
mcp-server/: server.py
mcp-server/toolkits/: __init__.py  base.py  data_analysis.py  droid.py  manager.py  opencode.py  web_enhanced.py
scripts/: poll.sh  send.sh  start.sh  status.sh
toolkits/: __init__.py  base.py  manager.py
toolkits/plugins/: astrology.py  data_analysis.py  droid.py  droid_config.example.json  opencode.py  web_enhanced.py
toolkits/plugins/bazi2/: __init__.py  analysis.py  bazi.py  chart.py  tables.py  translate.py
toolkits/plugins/bazi2/tests/: test_cross.py
toolkits/plugins/qimen2/: __init__.py  ganzhi.py  plates.py  qimen.py  stages.py  tables.py
toolkits/plugins/qimen2/tests/: test_cross.py
toolkits/plugins/ziwei2/: __init__.py  analysis.py  chart.py  tables.py  translate.py  ziwei.py
toolkits/plugins/ziwei2/tests/: test_cross.py
wiki/: Metaphysics-Glossary.md
