[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "jenny-mcp-server"
version = "0.1.0"
description = "MCP tool server for unified AI coding agent orchestration, data analysis, and web scraping"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jenny MCP Server Contributors" },
]
keywords = ["mcp", "ai", "coding-agent", "droid", "opencode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.27.0",
]

[project.optional-dependencies]
droid = []
opencode = ["httpx>=0.27.0"]
data-analysis = ["pandas>=2.0", "matplotlib>=3.7"]
web-enhanced = ["playwright>=1.40", "aiohttp>=3.9"]
all = [
    "httpx>=0.27.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "playwright>=1.40",
    "aiohttp>=3.9",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
jenny-mcp-server = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
